Upgrade Hive to 4.x, Hadoop to 3.4.x and Java to 11/17/21 (#181)
* Added JDK11/hive-jdbc-4-0-1/hadoop-3-4
* Code cleanup
* Updated pom.xml & CHANGELOG.md
* Fixed unit tests
* Updated docs